@@ -1,4 +1,5 @@
 0.2.0
+Added lfsdockprefs desktop file to install.
 Fixed missing prefs image.
 Set appnames.
 Updated appearance dialog.
